// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`YooAvatarComponent Snapshots Should have a bottom-left icon 1`] = `
<yoo-avatar
  bottom-left-icon="yo-fire"
  class="hydrated"
  data-yoo-avatar-host=""
  img-src="https://www.w3schools.com/w3images/avatar2.png"
>
  
  <div
    class="avatar"
    data-yoo-avatar=""
  >
    
    <div
      class="image"
      data-yoo-avatar=""
      style="background-repeat: no-repeat; background-size: cover; background-position-x: 5;0%; background-image: url(https://www.w3schools.com/w3images/avatar2.png);"
    />
    
    <span
      class="bottom-left"
      data-yoo-avatar=""
    >
      <i
        class="yo-fire"
        data-yoo-avatar=""
      />
    </span>
  </div>
</yoo-avatar>
`;

exports[`YooAvatarComponent Snapshots Should have a bottom-right icon 1`] = `
<yoo-avatar
  bottom-right-icon="yo-fire"
  class="hydrated"
  data-yoo-avatar-host=""
  img-src="https://www.w3schools.com/w3images/avatar2.png"
>
  
  <div
    class="avatar"
    data-yoo-avatar=""
  >
    
    <div
      class="image"
      data-yoo-avatar=""
      style="background-repeat: no-repeat; background-size: cover; background-position-x: 5;0%; background-image: url(https://www.w3schools.com/w3images/avatar2.png);"
    />
    <span
      class="bottom-right"
      data-yoo-avatar=""
    >
      <i
        class="yo-fire"
        data-yoo-avatar=""
      />
    </span>
    
  </div>
</yoo-avatar>
`;

exports[`YooAvatarComponent Snapshots Should have a top-left icon 1`] = `
<yoo-avatar
  class="hydrated"
  data-yoo-avatar-host=""
  img-src="https://www.w3schools.com/w3images/avatar2.png"
  top-left-icon="yo-fire"
>
  
  <div
    class="avatar"
    data-yoo-avatar=""
  >
    
    <span
      class="top-left"
      data-yoo-avatar=""
    >
      <i
        class="yo-fire"
        data-yoo-avatar=""
      />
    </span>
    <div
      class="image"
      data-yoo-avatar=""
      style="background-repeat: no-repeat; background-size: cover; background-position-x: 5;0%; background-image: url(https://www.w3schools.com/w3images/avatar2.png);"
    />
    
  </div>
</yoo-avatar>
`;

exports[`YooAvatarComponent Snapshots Should have a top-right icon 1`] = `
<yoo-avatar
  class="hydrated"
  data-yoo-avatar-host=""
  img-src="https://www.w3schools.com/w3images/avatar2.png"
  top-right-icon="yo-fire"
>
  
  <div
    class="avatar"
    data-yoo-avatar=""
  >
    <span
      class="top-right"
      data-yoo-avatar=""
    >
      <i
        class="yo-fire"
        data-yoo-avatar=""
      />
    </span>
    
    <div
      class="image"
      data-yoo-avatar=""
      style="background-repeat: no-repeat; background-size: cover; background-position-x: 5;0%; background-image: url(https://www.w3schools.com/w3images/avatar2.png);"
    />
    
  </div>
</yoo-avatar>
`;

exports[`YooAvatarComponent Snapshots Should have an image source 1`] = `
<yoo-avatar
  class="hydrated"
  data-yoo-avatar-host=""
  img-src="https://www.w3schools.com/w3images/avatar2.png"
>
  
  <div
    class="avatar"
    data-yoo-avatar=""
  >
    
    <div
      class="image"
      data-yoo-avatar=""
      style="background-repeat: no-repeat; background-size: cover; background-position-x: 5;0%; background-image: url(https://www.w3schools.com/w3images/avatar2.png);"
    />
    
  </div>
</yoo-avatar>
`;
